# sancho-rover

./: .dockerignore  .gitignore  CLAUDE.md  README.md
arduino/led_test/sketch/: sketch.ino
arduino/motor_test/sketch/: sketch.ino
arduino/sancho_bridge/: sancho_bridge.ino
arduino/sancho_bridge/python/: main.py
arduino/sancho_bridge/sketch/: sketch.ino
arduino/slow_test/sketch/: sketch.ino
arduino/straight_test/sketch/: sketch.ino
docker/: Dockerfile
docs/: architecture.md  deployment.md  implementation_report.md
ros2_ws/src/sancho_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/sancho_bridge/sancho_bridge/: motor_bridge_node.py
ros2_ws/src/sancho_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/sancho_bringup/config/: sancho_params.yaml
ros2_ws/src/sancho_bringup/launch/: sancho_launch.py  trail_test_launch.py
ros2_ws/src/sancho_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/sancho_control/sancho_control/: controller_node.py
ros2_ws/src/sancho_follow_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/sancho_follow_control/sancho_follow_control/: follow_controller_node.py
ros2_ws/src/sancho_follow_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/sancho_follow_perception/sancho_follow_perception/: follow_camera_node.py
ros2_ws/src/sancho_mode_manager/: package.xml  setup.cfg  setup.py
ros2_ws/src/sancho_mode_manager/sancho_mode_manager/: mode_manager_node.py
ros2_ws/src/sancho_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/sancho_perception/models/: README.md
ros2_ws/src/sancho_perception/sancho_perception/: camera_node.py  sensor_node.py  sim_node.py
ros2_ws/src/sancho_rover/: package.xml  setup.py
ros2_ws/src/sancho_rover/config/: sancho_params.yaml
ros2_ws/src/sancho_rover/launch/: sancho.launch.py
ros2_ws/src/sancho_rover/sancho_rover/: camera_node.py  controller_node.py  motor_bridge_node.py  sensor_node.py
tools/: calibrate_hsv.py  calibrate_hsv_web.py  rebuild_and_push.sh  test_camera_lab.py  test_camera_local.py  view_camera_live.sh  visualize_camera_pipeline.py  visualize_shape_pipeline.py
