<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sancho_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configuration for the full SANCHO stack</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>sancho_perception</exec_depend>
  <exec_depend>sancho_control</exec_depend>
  <exec_depend>sancho_bridge</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
